add localisation (L10n) notes for error pages and Private Browsing splash page (for issue #625; related to PR #626)

--- a/app/src/main/res/raw/private_style.css
+++ b/app/src/main/res/raw/private_style.css
@@ -122,7 +122,7 @@ button:active {
     width: 4em;
 }
 
-.two-column {
+html.private ul {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-column-gap: 1em;
