--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,4 +1,7 @@
 <resources>
+    <!-- World -->
+    <dimen name="world_width">800px</dimen>
+
     <!-- Browser window -->
     <dimen name="browser_width_pixels">800px</dimen>
     <item name="browser_world_width" format="float" type="dimen">4.0</item>
@@ -93,4 +96,11 @@
     <dimen name="crash_dialog_height">340dp</dimen>
     <item name="crash_dialog_world_y" format="float" type="dimen">1.6</item>
     <item name="crash_dialog_world_z" format="float" type="dimen">-1.8</item>
+
+    <!-- Popup Window -->
+    <item name="url_bar_popup_world_width" format="float" type="dimen">4.0</item>
+    <dimen name="url_bar_popup_height">250dp</dimen>
+    <item name="url_bar_popup_world_x" format="float" type="dimen">1.3</item>
+    <item name="url_bar_popup_world_y" format="float" type="dimen">0.15</item>
+    <item name="url_bar_popup_world_z" format="float" type="dimen">0.2</item>
 </resources>
